src/pages/myaccount/myaccount.css
.card-myData:not(.card-myData:last-child) {
  margin-bottom: var(--spacing-2);
}
.card-myData__left,
.card-myData__right {
  display: inline-block;
  width: 100px;
}
.card-myData__left {
  margin-right: var(--spacing-3);
}

.listCard {
  /* height: 48px; */
  padding: var(--spacing-2) var(--spacing-3);
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-wrap: wrap;
  background-color: var(--bg-surf-subtle-light);
  border-radius: var(--border-rad-comp);
  border-bottom: var(--border-2);
  color: var(--black-light);
}

.listCard-icon {
  margin-bottom: var(--spacing-1);
}

.listCard:not(.listCard:last-child) {
  margin-bottom: var(--spacing-2);
}
.listCard-icon {
  margin-left: var(--spacing-4);
}

.options {
  height: var(--spacing-6);
  padding: var(--spacing-2);
  border-radius: var(--border-rad-comp);
  display: flex;
  align-items: center;
  color: var(--black-light);
}
.options__icon {
  width: var(--spacing-5);
  height: var(--spacing-5);
  padding: var(--spacing-1);
  margin-right: var(--spacing-4);
  background-color: var(--iconSurface-light);
  border-radius: var(--border-rad-comp);
}

